<resources>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7655373768605194/3050608555</string>

    <string name="app_name">AMM Converter</string>
    <string name="querying_decoders">Querying decoders...</string>
    <string name="show_more_decoders">More decoders >>></string>
    <string name="connect">Connect</string>
    <string name="open_practice">Open Practice</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="decoder_console_mode">Decoder console mode</string>
    <string name="racing_mode">Racing mode</string>
    <string name="drivers_editor">Drivers editor</string>
    <string name="bad_msg">Bad messages reporting</string>
    <string name="drivers_sync">Drivers name sync</string>
    <string name="transponder_sound">Transponder sound</string>
    <string name="time_to_speech">Say time in Training mode</string>
    <string name="start_stop_sound">Start/stop sound</string>
    <string name="minLapTime">Min. lap time</string>
    <string name="startup_delay">Startup Delay</string>
    <string name="race_duration">Race Duration</string>
    <string name="include_min_lap_tim">include min. lap time</string>
    <string name="secs">secs</string>
    <string name="mins">mins</string>
    <string name="options">Options</string>
    <string name="training_mode">Training mode</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="training_mode_text">Tracks your transponder times from decoder during training</string>
    <string name="label_open"><![CDATA[Open >>>]]></string>
    <string name="drivers_editor_text">Assign names to your transponders; sharing via cloud</string>
    <string name="racing_mode_text">Tracks all racers from decoders and show results in timing table</string>
    <string name="bad_msg_long">Enables bad messages from decoder reporting to us for continues improvements of the application</string>
    <string name="drivers_sync_long">Enables drivers names sync to transponder code via cloud. Once entered, will sync with other timers with the same application</string>
    <string name="transponder_sound_long">Beep on every transponder passing whenever decoder is connected</string>
    <string name="time_to_speech_long">Say time on every lap in local language. Use %m, %s or %ms in the pattern</string>
    <string name="start_stop_sound_long">Beep on race start and stop. With pre-start delay, beeps 3 times</string>
    <string name="min_lap_long">Minimal lap time for each transponder. Times with less lap time will be ignored</string>
    <string name="startup_delay_long">Delays race startup by few seconds that racer can get ready to start</string>
    <string name="race_duration_long">Limits time of the race automatically to pre-set minutes. Total race duration will be plus min lap time. If not enabled, race will go until manual stop</string>
    <string name="decoder_not_connected">Decoder not connected</string>
    <string name="decoder_re_connected">Decoder re-connected</string>
    <string name="tap"><![CDATA[<transponder>]]></string>
    <string name="select_label">Select transponder to watch</string>
    <string name="select_decoder_label">Select decoder to connect</string>
    <string name="update_driver_name">Update driver name for the transponder</string>
    <string name="driver_name">Driver</string>
    <string name="no_transponder">No transponder visible from decoders so far. Pass loop at least once to register transponder</string>
    <string name="or_connect_directly_to_decoder_by_ip_address">Or connect directly to decoder by IP address</string>
    <string name="help_connecting">Help connecting</string>
    <string name="make_a_wish">Make a wish</string>
    <string name="transponder">Transponder</string>
    <string name="pos_hash">#</string>
    <string name="Laps">Laps</string>
    <string name="LapTime">Time</string>
    <string name="Diff">Diff</string>
    <string name="decoderId">DecoderId:</string>
    <string name="loopTriggers">Loop triggers:</string>
    <string name="noise">Noise:</string>
    <string name="well">Well, yes, this is not full timing app of course. But send me an email to describe what you need and we might find a way how to move forward :)</string>
    <string name="send_email">Send e-mail</string>
    <string name="home">Home</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="value_3">3</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="finish_message">Are you sure you want to stop?</string>
    <string name="amm_short">AMM</string>
    <string name="test">Test</string>
    <string name="d_d_d">%m:%s.%ms</string>
    <string name="pattern">Pattern</string>
</resources>
