<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/baseline_person_24px"
            android:title="@string/training_mode" />
        <item
            android:id="@+id/nav_racing"
            android:icon="@drawable/baseline_supervisor_account_24px"
            android:title="@string/racing_mode" />
        <item
            android:id="@+id/nav_console"
            android:icon="@drawable/baseline_view_headline_24px"
            android:title="@string/decoder_console_mode" />

    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">

        <item
            android:id="@+id/nav_drivers_editor"
            android:icon="@drawable/baseline_perm_contact_calendar_24px"
            android:title="@string/drivers_editor" />

        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/baseline_settings_20px"
            android:title="@string/options" />

    </group>

    <group android:id="@+id/grp1" android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_connection_help"
            android:icon="@drawable/baseline_help_outline_24px"
            android:title="@string/help_connecting" />

    </group>

</menu>